# kube-ci

./: LICENSE  README.md  kube-ci.cabal  stack.yaml
containers/checkout/: Dockerfile  run.sh
src/: Main.hs
