name:                kube-ci
version:             0.1.0.0
homepage:            https://github.com/robbiemcmichael/kube-ci#readme
license:             BSD3
license-file:        LICENSE
author:              Robbie McMichael
maintainer:          Robbie McMichael
copyright:           2020 Robbie McMichael
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kube-ci
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs

  build-depends:
      base >= 4.7 && < 5
    , aeson
    , bytestring
    , github
    , github-webhooks
    , servant-server
    , servant-github-webhook
    , wai
    , warp
